2016-04-12 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75512: Follow-up to Auto-login on create throws fatal error

2016-04-11 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75513: Typing error in CreateActionController.php
	* Resolves #75512: Auto-login on create throws fatal error

2016-04-07 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75438: PHP 5.6 Runtime Deprecation Notice

2016-04-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #75364: PHP Runtime Deprecation in PHP 5.6
	* Fix incorect characters in extconf.php

2016-02-19 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Update version to 4.0.2

2016-02-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #73494: Fatal error: Call to a member function initCountrySubdivisions() on a non-object

2016-02-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #72446: Edit View never to be rendered
	* Resolves #72541: Version number in composer.json
	* Resolves #72814: evalValues preg doesn't work properly
	* Resolves #72958: evalValues for gender fails
	* Update to the manual
	* Update version to 4.0.1

2015-12-17 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition on TYPO3 CMS 6.2 and 7.6

2015-12-17 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for password edition on TYPO3 CMS 6.2 and 7.6
	* Update to the manual

2015-12-16 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Fix for the length of the language field on fe_users table
	* Resolves #51278: Cannot use empty option in select field with evalValues = required
	* Fix for superfluous line feeds in plain text emails
	* Correction to composer.json
	* Correction to labels of the gender field
	* Update to the manual
	* Fix for password edition on TYPO3 CMS 6.2

2015-12-15 Stanislas Rolland  <typo3(arobas)sjbr.ca>
	* Resolves #65270: Security issue in sr_feuser_register 3.1.3
	* Resolves #47475: if TS Constant enableEmailOnUpdate=2 => ###TCA_INPUT_xxx### markers are not replaced
